Add Unit Test for controller, updated workflow and fixed jwt secret