@@ -3,10 +3,8 @@ package it.unisalento.pasproject.scoreservice.business;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import it.unisalento.pasproject.scoreservice.domain.Gpu;
 import it.unisalento.pasproject.scoreservice.repositories.CpuRepository;
 import it.unisalento.pasproject.scoreservice.domain.Cpu;
-import it.unisalento.pasproject.scoreservice.repositories.GpuRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,24 +20,47 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+/**
+ * Implements data retrieval strategy for CPU data.
+ * This class is responsible for fetching CPU data from external sources,
+ * parsing the data, and updating the local database with the new CPU information.
+ */
 @Component
 public class CpuDataRetrievalStrategy implements DataRetrievalStrategy {
+    /**
+     * Logger for logging information and errors.
+     */
     private final Logger LOGGER = LoggerFactory.getLogger(CpuDataRetrievalStrategy.class);
+    /**
+     * Repository for CPU data operations.
+     */
     private final CpuRepository cpuRepository;
 
+    /**
+     * URLs for fetching CPU benchmarks data.
+     */
     private static final String MAC_BENCHMARKS_URL = "https://browser.geekbench.com/mac-benchmarks.json";
     private static final String PROCESSOR_BENCHMARKS_URL = "https://browser.geekbench.com/processor-benchmarks.json";
 
+    /**
+     * Constructs a CpuDataRetrievalStrategy with a CpuRepository.
+     * @param cpuRepository Repository for CPU data operations.
+     */
     @Autowired
     public CpuDataRetrievalStrategy(CpuRepository cpuRepository) {
         this.cpuRepository = cpuRepository;
     }
 
+    /**
+     * Retrieves CPU data from external sources and updates the local database.
+     * This method fetches CPU data from predefined URLs, parses the data,
+     * ensures uniqueness of the CPUs, and updates the local database with the new data.
+     */
     @Override
     public void retrieveData() {
         List<String> cpuUrls = Arrays.asList(MAC_BENCHMARKS_URL, PROCESSOR_BENCHMARKS_URL);
 
-        cpuRepository.deleteAll(); // Rimuove la vecchia collezione se esiste
+        cpuRepository.deleteAll();
 
         Map<String, Cpu> uniqueCpus = new HashMap<>();
 
@@ -48,7 +69,7 @@ public class CpuDataRetrievalStrategy implements DataRetrievalStrategy {
                 HttpResponse<String> response = sendHttpRequest(url);
                 Cpu[] cpus = parseCpuData(response.body());
 
-                if (url.equals(cpuUrls.getFirst())) {
+                if (url.equals(cpuUrls.get(0))) {
                     for (Cpu cpu : cpus) {
                         String normalizedCpuName = normalizeCpuName(cpu.getDescription());
                         cpu.setName(normalizedCpuName);
@@ -67,9 +88,16 @@ public class CpuDataRetrievalStrategy implements DataRetrievalStrategy {
             }
         }
 
-        cpuRepository.saveAll(uniqueCpus.values()); // Salva i dati CPU unici nel database
+        cpuRepository.saveAll(uniqueCpus.values()); // Saves the unique CPU data to the database
     }
 
+    /**
+     * Sends an HTTP request to the specified URL and returns the response.
+     * @param url The URL to send the request to.
+     * @return The HTTP response.
+     * @throws IOException If an I/O error occurs.
+     * @throws InterruptedException If the operation is interrupted.
+     */
     private HttpResponse<String> sendHttpRequest(String url) throws IOException, InterruptedException {
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(url))
@@ -78,6 +106,12 @@ public class CpuDataRetrievalStrategy implements DataRetrievalStrategy {
         return HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
     }
 
+    /**
+     * Parses the JSON response body into an array of Cpu objects.
+     * @param responseBody The JSON response body to parse.
+     * @return An array of Cpu objects.
+     * @throws JsonProcessingException If parsing fails.
+     */
     private Cpu[] parseCpuData(String responseBody) throws JsonProcessingException {
         ObjectMapper mapper = new ObjectMapper();
         JsonNode rootNode = mapper.readTree(responseBody);
@@ -86,6 +120,11 @@ public class CpuDataRetrievalStrategy implements DataRetrievalStrategy {
         return mapper.treeToValue(devicesNode, Cpu[].class);
     }
 
+    /**
+     * Normalizes the CPU name by removing any frequency information.
+     * @param cpuName The CPU name to normalize.
+     * @return The normalized CPU name.
+     */
     private String normalizeCpuName(String cpuName) {
         return cpuName.replaceAll(" @.*", "");
     }
